# ProjectInsight

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.template.yaml  workspace.template.yaml
configs/templates/: project.template.yaml
scripts/: repo_to_text.py
src/projectinsight/: __main__.py  main.py  renderer.py
src/projectinsight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/projectinsight/builders/: __init__.py  component_builder.py  concept_flow_builder.py  dependency_builder.py  dynamic_behavior_builder.py  flow_builder.py
src/projectinsight/core/: __init__.py  cache_manager.py  config_loader.py  interactive_wizard.py  parallel_manager.py  project_processor.py
src/projectinsight/intelligence/: ecosystem_analyzer.py  graph_analyzer.py  heuristics_scorer.py
src/projectinsight/intelligence/defaults/: default_heuristics.yaml
src/projectinsight/parsers/: __init__.py  component_parser.py  concept_flow_analyzer.py  flow_parser.py  py_parser.py  seed_discoverer.py
src/projectinsight/renderers/: __init__.py  component_renderer.py  concept_flow_renderer.py  dynamic_behavior_renderer.py  flow_renderer.py  renderer.py
src/projectinsight/reporters/: __init__.py  markdown_reporter.py
src/projectinsight/semantics/: __init__.py  dynamic_behavior_analyzer.py  semantic_link_analyzer.py
src/projectinsight/utils/: __init__.py  color_utils.py  file_system_utils.py  logging_utils.py  parser_utils.py  path_utils.py
